# python-hypr-power

./: README.md  pyproject.toml  python_hypr_power.sh
python_hypr_power/: config.py  logger.py  main.py  power_button.py  power_menu.py  processes.py
python_hypr_power/styles/: styles.css
src/: config.py  main.py  power_button.py  power_menu.py  settings.py
src/styles/: styles.css
